fix: DailySchedule component dayinfo calss z-index add

--- a/src/components/DailySchedule/DailySchedule.module.css
+++ b/src/components/DailySchedule/DailySchedule.module.css
@@ -24,7 +24,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;;
+  background-color: white;
+  z-index: 99;
 }
 
 .spanArea {
